Fixed: Linux build not parsing text characters correctly.
Fixed: Linux build crashing when delete online accounts.

09-09-2019, Coruja
Fixed: Accounts not clearing 'password tries' counter after enter correct password when ClientLoginMaxTries setting is enabled on sphere.ini.
Added: Missing context menu option "Rename" when player click on a owned pet.
[sphere_msgs.scp]: Added new messages 'npc_pet_rename_prompt', 'npc_pet_rename_success1', 'npc_pet_rename_success2'

19-09-2019, Coruja
Fixed: Pets not showing 'guarding' tooltip correctly.
Changed: Animal Taming skill range is now softcoded.
[sphere_skills.scp]: Added RANGE value on Animal Taming skill

20-09-2019, Coruja
Changed: Vendor BUY/SELL commands will not check LOS anymore.
Changed: Misc improvements on Context Menu engine.
	-To improve usability, it will not check LOS anymore
	-Entries now will gray out automatically based on distance, flags, etc
[sphere.ini]: Removed OF_NoContextMenuLOS option flag
[sphereCrypt.ini]: Added crypt key for classic clients 7.0.78 ~ 7.0.79 and enhanced clients 4.0.78 ~ 4.0.79

26-09-2019, Coruja
[items/multis/multis_ships.scp]: Removed duplicated MULTIDEFs
[items/sphere_item_deco_furniture.scp]: Added missing mailboxes and kitchen set items
[items/sphere_item_holiday_halloween.scp]: Added publish 106 items
[items/sphere_item_quests.scp]: Added Forgotten Treasures, Forsaken Foes and The Fellowship items
[items/sphere_item_resources.scp]: Added publish 106 items
[systems/sphere_system_aquarium.scp]: Added publish 106 items

27-09-2019, Coruja
Changed: Misc improvements on account connection process.
[sphere.ini]: Removed LocalIPAdmin setting for security purposes

30-09-2019, Coruja
Changed: Removed NEWPASSWORD account function for security purposes. To set/change account password, use PASSWORD or MD5PASSWORD instead.
Changed: Improved internal regex engine (STRREGEX function).

02-10-2019, Coruja
Changed: Improved internal random number generator engine (RAND function).