@@ -62,5 +62,4 @@ ADD(SYSMESSAGEUA,		"SYSMESSAGEUA")
 ADD(TELE,				"TELE")
 ADD(TILE,				"TILE")
 ADD(UNEXTRACT,			"UNEXTRACT")
-ADD(VERSION,			"VERSION")
 ADD(WEBLINK,			"WEBLINK")
