@@ -338,16 +338,13 @@ MSG(MINING_NORESOURCE,					"There is no metal here to mine.")
 MSG(MINING_REACH,						"That is too far away.")
 MSG(MINING_SUCCESS,						"You dig some %s and put it in your backpack.")
 MSG(MSG_ACC_AGE,						"This account is %d months old.")
-MSG(MSG_ACC_BADPASS,					"Bad password for this account.")
 MSG(MSG_ACC_BLOCK,						"Account '%s' blocked")
 MSG(MSG_ACC_BLOCKED,					"Account blocked. Send email to admin %s.")
 MSG(MSG_ACC_DENIED,						"Sorry, but your access has been denied.")
 MSG(MSG_ACC_GUSED,						"All guest accounts are currently used.")
 MSG(MSG_ACC_KICK,						"A'%s' was %sed by '%s'")
-MSG(MSG_ACC_NEEDPASS,					"Must supply a password.")
 MSG(MSG_ACC_PRIV,						"You are not privileged to do that")
 MSG(MSG_ACC_UNK,						"Unknown account name '%s'. Try using a 'guest' account.")
-MSG(MSG_ACC_WCLI,						"Bad login format. Check Client Version '%s' ?")
 MSG(MSG_ACC_PASSCLEAR,					"Password has been cleared.")
 MSG(MSG_ACC_PASSCLEAR_RELOG,			"Log out, then back in to set the new password.")
 MSG(MSG_ACC_ACCEPTPASS,					"Password has been set.")
@@ -867,9 +864,7 @@ MSG(USE_SPYGLASS_LAND,					"You see land to the")
 MSG(USE_SPYGLASS_DARK,					"There isn't enough sun light to see land!")
 MSG(USE_SPYGLASS_WEATHER,				"The weather is too rough to make out any land!")
 MSG(USE_SPYGLASS_NO_LAND,				"You can't see any land.")
-MSG(CONSOLE_NO_ADMIN,					"Sorry you don't have admin level access")
 MSG(CONSOLE_WELCOME_2,					"Welcome to the Remote Admin Console")
-MSG(CONSOLE_WELCOME_1,					"Welcome to")
 MSG(CONSOLE_NOT_PRIV,					"This account does not exist or is not privileged to log in via telnet.")
 MSG(MAP_IS_BLANK,						"This map is blank.")
 MSG(GAINRADIUS_NOT_MET,					"This action was so easy that it will not improve your skill.")
