@@ -1618,3 +1618,7 @@ Changed: Improved internal regex engine (STRREGEX function).
 
 02-10-2019, Coruja
 Changed: Improved internal random number generator engine (RAND function).
+
+16-10-2019, Coruja
+Fixed: Accounts being created with FIRSTCONNECTDATE/LASTCONNECTDATE property already set.
+[sphere_msgs.scp]: Removed unused messages 'msg_acc_badpass', 'msg_acc_needpass', 'msg_acc_wcli', 'console_no_admin', 'console_welcome_1'
